<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="title_main_activity">My Nanodegree Apps!</string>
    <string name="popular_movies">POPULAR MOVIES</string>
    <string name="super_duo">SUPER DUO</string>
    <string name="build_it_bigger">BUILD IT BIGGER</string>
    <string name="xyz_reader">XYZ READER</string>
    <string name="capstone">CAPSTONE</string>
</resources>
