<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="#ffd2dfe6">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="40dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_main_activity"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/popular_movie_button"
        style="@style/buttonStyle"
        android:text="@string/popular_movies" />
    <Button
        android:id="@+id/super_duo_button"
        style="@style/buttonStyle"
        android:text="@string/super_duo" />
    <Button
        android:id="@+id/build_it_bigger_button"
        style="@style/buttonStyle"
        android:text="@string/build_it_bigger" />
    <Button
        android:id="@+id/xyz_reader_button"
        style="@style/buttonStyle"
        android:text="@string/xyz_reader" />
    <Button
        android:id="@+id/capstone_button"
        style="@style/capstoneButtonStyle"
        android:text="@string/capstone"
        android:textColor="#ffffffff" />


</LinearLayout>
